<resources>
    <string name="app_name">iSeeTheLight</string>
    <string name="status_cannot_upload">Cannot upload</string>
    <string name="status_initial">Status</string>
    <string name="light_emulator">Tap the color buttons to record your light signal</string>
    <string name="color_red">R</string>
    <string name="color_green">G</string>
    <string name="color_blue">B</string>
    <string name="color_white">W</string>
    <string name="color_yellow">Y</string>
    <string name="color_magenta">M</string>
    <string name="color_cyan">C</string>
    <string name="button_play">Replay</string>
    <string name="button_upload">Upload and turn on</string>
    <string name="interval_seconds">Interval, seconds:</string>
    <string name="timer">Timer</string>
    <string name="timer_duration">Timer duration, hours:</string>
    <string name="amb_light_sensor">Ambient light sensor</string>
    <string name="amb_light_sensor_desc">Turns the light off during the day automatically</string>
    <string name="light_on">Light on</string>
    <string name="command_sent">Command sent</string>
    <string name="cannot_send_command">Cannot send command</string>
    <string name="no_response">No response from the light</string>
    <string name="help">\?</string>
    <string name="not_connected">Not connected</string>
    <string name="rename_light_menu_item_text">Rename...</string>
    <string name="on_off">On/off</string>
    <string name="light_id_mode">Light ID mode</string>
    <string name="lamp_mode">Lamp mode</string>
    <string name="ambient_light_sensor">Ambient light sensor</string>
    <string name="turn_off_timer">Turn off timer</string>
    <string name="website">Website</string>
    <string name="dialog_rename">Rename the light</string>
    <string name="button_rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="name_light_as">Name %s as:</string>
    <string name="webpage">http://ftsdesign.biz/iseethelight/index.html</string>
</resources>
